# RAGFromScratch

./: Makefile  README.md  docker-compose-ollama.yml  main.py  mkdocs.yml  ollama_entrypoint.sh  pyproject.toml
data/vector_strore/: vdb.index
docs/: LICENSE.md  index.md  installation.md  user-guide.md
docs/api-reference/: index.md  prompt.md  rag_system.md
docs/api-reference/config/: data_source_config.md  model_config.md  vector_db_config.md
docs/api-reference/data_source/: base.md  pdf_source.md
docs/api-reference/models/: base.md  ollama_model.md
docs/api-reference/text_splitter/: base.md  recursive_splitter.md
docs/api-reference/vector_db/: base.md  faiss_db.md
src/: prompt.py  rag_system.py
src/config/: data_source_config.py  model_config.py  vector_db_config.py
src/data_source/: base.py  pdf_source.py
src/models/: base.py  ollama_model.py
src/text_splitter/: base.py  recursive_splitter.py
src/vector_db/: base.py  faiss_db.py
tests/: conftest.py  test_config.py  test_data_source.py  test_models.py  test_prompt.py  test_rag_system.py  test_text_splitter.py  test_vector_db.py
