[tool.poetry]
name = "ragfromscratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.3.3"
faiss-cpu = "^1.9.0"
pypdf2 = "^3.0.1"
numpy = "^2.1.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.12.0"
bandit = "^1.7.10"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pre-commit = "^4.0.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.41"
mkdocstrings-python = "^1.12.1"






[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
